--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -3,7 +3,20 @@
   border-radius: 7px;
 }
 
-.card-body {
+.cards-body {
   display: flex;
   flex-wrap: wrap;
+  flex-grow: 0;
+  flex-basis: 25%;
+}
+
+@media only screen and (max-width: 700px) {
+  .cards-body {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 0;
+    flex-basis: 50%;
+    max-width: 50%;
+    align-items: center;
+  }
 }
